--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h1>It works!</h1>
-
+  <!-- TODO Remove this test -->
+  <button id="testSound">testSound</button>
   <script src="./build/main.js"></script>
 </body>
 </html>
