--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="./build/main.css">
 </head>
 <body>
+  <div class="game-info">
+    <div class="time">Time: <span id="timevalue">3:00</span></div>
+    <div class="score">Score: <span id="scorevalue">0</span></div>
+  </div>
   <script src="./build/main.js"></script>
 </body>
 </html>
