ground texture ok

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div class="game-info">
-    <div class="time">Time: <span id="timevalue">90.00</span></div>
-    <div class="score">Score: <span id="scorevalue">0</span></div>
+    <div class="time">Temps : <span id="timevalue">90.00</span>s</div>
+    <div class="score">Score : <span id="scorevalue">0</span> pts</div>
   </div>
 
   <div class="overlay"></div>
