--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vintage phone</title>
+  <title>Phone Odyssey</title>
   <link rel="stylesheet" href="./build/main.css">
 </head>
 <body>
